# win7-notifications

./: CHANGELOG.md  Cargo.toml  LICENSE.spdx  README.md  build.rs
.changes/: check-dwm-enabled.md  clean-window-data.md  close-btn-hover.md  config.json  fix-crash-on-click-close-btn.md  fix-cursor.md  fix-first-notif-not-showing.md  fix-no-icon-crash.md  initial-release.md  notifications-gaps.md  notificatiosn-icon.md  once-cell-version.md  re-order-notifications.md  rust-edition-2021.md  shadows.md  silent.md  sounds.md  windows-sys-0.52.md  windows-sys.md  wm_close.md
.github/workflows/: audit.yml  build.yml  clippy-fmt.yml  covector-version-or-publish.yml  fmt.yml  lint-fmt.yml  lint.yml  test.yml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
examples/: multiple.rs  simple.rs  single.rs
src/: definitions.rs  lib.rs  notification.rs  timeout.rs  util.rs
