[package]
name = "win7-notifications"
version = "0.2.2"
description = "Send Windows 10 styled notifications on Windows 7."
authors = [ "Tauri Programme within The Commons Conservancy" ]
edition = "2018"
keywords = [ "notifications", "win7", "windows", "windows7" ]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/win7-notifications"
documentation = "https://docs.rs/win7-notifications"
categories = [ "gui" ]

[build-dependencies]
windows = "0.21.1"

[dependencies]
windows = "0.21.1"
once_cell = "1.8.0"

[dev-dependencies]
tao = "0.5.2"
