[package]
name = "win7-notifications"
version = "0.2.3"
description = "Send Windows 10 styled notifications on Windows 7."
authors = [ "Tauri Programme within The Commons Conservancy" ]
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/win7-notifications"
documentation = "https://docs.rs/win7-notifications"
keywords = [ "notifications", "win7", "windows", "windows7" ]
categories = [ "gui" ]

[dependencies]
once_cell = "1.9.0"

[dependencies.windows]
  version = "0.29.0"
  features = [
  "alloc",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Com",
  "Win32_System_Diagnostics_Debug",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_Shell",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
tao = "0.5.2"
