[package]
name = "win7-notifications"
version = "0.3.1"
description = "Send Windows 10 styled notifications on Windows 7."
authors = [ "Tauri Programme within The Commons Conservancy" ]
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/win7-notifications"
documentation = "https://docs.rs/win7-notifications"
keywords = [ "notifications", "win7", "windows", "windows7" ]
categories = [ "gui" ]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [ "x86_64-pc-windows-msvc" ]

[dependencies]
once_cell = "1.17"

  [dependencies.windows-sys]
  version = "0.45"
  features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Com",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_Shell",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media_Audio"
]

[dev-dependencies]
winit = "0.28"
image = "0.24"
